--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,6 @@
-@import "tailwindcss";
-
+@tailwind base;
+@tailwind components;
 @tailwind utilities;
-@config "../../tailwind.config.ts";
 
 *,
 *::before,
